# PCA

./: .gitignore  CMakeLists.txt  README.md
docs/: PCA.md
src/cpp/: pca.cpp  pca_run.cpp
src/python/: mnist2csv.py  pca-env.txt  pca_reduce_4Dto2D.py  reduceDimensions.py
src/python/ids2018/: .benchmark_data_persistence.py.swp  benchmark_data_persistence.py  ids.txt  utils.py
